[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Hold-em.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="Hold-em" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Players" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -960.0
margin_right = 960.0
margin_bottom = 128.0

[node name="PlayerList" type="HBoxContainer" parent="Players"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -960.0
margin_right = 960.0
margin_bottom = 128.0
custom_constants/separation = 64
alignment = 1

[node name="Table" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -156.0
margin_right = 960.0
margin_bottom = 228.0
mouse_filter = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Table"]
margin_top = 159.0
margin_right = 1920.0
margin_bottom = 190.0
custom_constants/separation = 64
alignment = 1

[node name="Flop1" type="Label" parent="Table/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 832.0
margin_right = 832.0
margin_bottom = 31.0

[node name="Flop2" type="Label" parent="Table/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 896.0
margin_right = 896.0
margin_bottom = 31.0

[node name="Flop3" type="Label" parent="Table/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 960.0
margin_right = 960.0
margin_bottom = 31.0

[node name="Turn" type="Label" parent="Table/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 31.0

[node name="River" type="Label" parent="Table/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 1088.0
margin_right = 1088.0
margin_bottom = 31.0

[node name="HBoxContainer" type="HBoxContainer" parent="Table"]
margin_top = 194.0
margin_right = 1920.0
margin_bottom = 225.0
custom_constants/separation = 64
alignment = 1

[node name="PotLbl" type="Label" parent="Table/HBoxContainer"]
unique_name_in_owner = true
margin_left = 896.0
margin_right = 896.0
margin_bottom = 31.0

[node name="RoundLbl" type="Label" parent="Table/HBoxContainer"]
unique_name_in_owner = true
margin_left = 960.0
margin_right = 960.0
margin_bottom = 31.0

[node name="ActionLbl" type="Label" parent="Table/HBoxContainer"]
unique_name_in_owner = true
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 31.0

[node name="Icon" type="Sprite" parent="."]
visible = false
position = Vector2( 1376, 224 )
texture = ExtResource( 4 )
